// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`CartButton should render the badge if products have been added into the cart 1`] = `
<DocumentFragment>
  <a
    aria-label="Cart, 3 items"
    class="shopping_cart_link"
    data-test="shopping-cart-link"
    role="button"
  >
    <span
      class="shopping_cart_badge"
      data-test="shopping-cart-badge"
    >
      3
    </span>
  </a>
</DocumentFragment>
`;

exports[`CartButton should render with default props 1`] = `
<DocumentFragment>
  <a
    aria-label="Cart, empty"
    class="shopping_cart_link"
    data-test="shopping-cart-link"
    role="button"
  />
</DocumentFragment>
`;
